--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -65,3 +65,39 @@ header nav ul li {
 header nav ul {
   padding: 0;
 }
+
+/*Hero Styles*/
+
+.hero {
+  position: relative;
+  justify-content: center;
+  text-align: center;
+}
+
+.hero .background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  background-image: url("../img/background-img.jpg");
+}
+
+.hero h1 {
+  margin-top: -70px;
+  font-size: 5em;
+  font-weight: 300;
+}
+
+.hero h1 span {
+  font-weight: 500;
+}
+
+@media (max-width: 800px) {
+  .hero h1 {
+    font-size: 2.5em;
+  }
+}
