--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -116,3 +116,34 @@ header nav ul {
 .about .thumbnail img {
   border-radius: 50px;
 }
+
+/*Portfolio Styles*/
+
+.portfolio {
+  justify-content: center;
+}
+
+.portfolio .thumbnail {
+  padding: 0;
+  border: none;
+}
+
+.portfolio .thumbnail img {
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.portfolio .thumbnail img:hover {
+  opacity: 0.75;
+}
+
+.portfolio .thumbnail h4 {
+  text-decoration: none;
+  color: black;
+  padding: 20px;
+}
+
+.portfolio .thumbnail h4:hover {
+  opacity: 0.75;
+  color: black;
+}
