--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -38,7 +38,9 @@ section:not(.hero) {
 }
 
 section .header {
-  font-family: "Bebas Neue";
+  font-family: "BebasNeue", "Oswald";
+  font-weight: 300;
+  text-transform: uppercase;
   margin-bottom: 30px;
 }
 
@@ -102,7 +104,11 @@ header nav ul {
 
 @media (max-width: 800px) {
   .hero h1 {
-    font-size: 2.5em;
+    font-size: 2em;
+  }
+  
+  .hero .background-image {
+    position: absolute;
   }
 }
 
@@ -129,6 +135,12 @@ header nav ul {
 
 .about .header {
   font-size: 3em;
+}
+
+@media (max-width: 800px) {
+  .about .header {
+    font-size: 2em;
+  }
 }
 
 /*Portfolio Styles*/
@@ -166,6 +178,12 @@ header nav ul {
   font-size: 3em;
 }
 
+@media (max-width: 800px) {
+  .portfolio .header {
+    font-size: 2em;
+  }
+}
+
 /*Contact Styles*/
 
 .contact {
@@ -174,4 +192,10 @@ header nav ul {
 
 .contact .header {
   font-size: 3em;
+}
+
+@media (max-width: 800px) {
+  .contact .header {
+    font-size: 2em;
+  }
 }
