--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -137,6 +137,10 @@ header nav ul {
   font-size: 3em;
 }
 
+.about p {
+  font-size: 18px;
+}
+
 @media (max-width: 800px) {
   .about .header {
     font-size: 2em;
